--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,3 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_test"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"></LinearLayout>
+    android:orientation="vertical"
+    tools:context="com.bypassmobile.octo.MainActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/id_toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@color/primary"
+        app:titleTextColor="@color/accent" />
+    <ProgressBar
+        android:id="@+id/id_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:theme="@style/ProgressBarAccent"
+        android:layout_gravity="center" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/id_recyclerview_browse_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
